updated gui to handle all files

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>pdf-organizer</title>
+    <link rel="stylesheet" type="text/css" href="../node_modules/purecss/build/pure-min.css" />
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
